<resources>
    <string name="app_name">TicTacToe</string>
    <string name="newGame_label">New Game</string>
    <string name="first_human">You go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s turn.</string>
    <string name="result_tie">It\'s a tie.</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_computer_wins">Android won!</string>

    <string name="info">Info</string>

    <string name="human">Human: </string>
    <string name="ties">Ties: </string>
    <string name="android">Android: </string>

    <string name="difficulty">Difficulty</string>
    <string name="quit">Quit</string>
    <string name="about_game">About game</string>

    <string name="difficulty_choose">Difficulty: </string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_harder">Harder</string>
    <string name="difficulty_expert">Expert</string>

    <string name="quit_question">Are you sure you want to quit?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>

    <string name="resetScore">Reset Scores</string>

    <string name="by_name">Tic Tac Toe</string>
    <string name="by">By Nicolas Larranaga Cifuentes</string>
    <string name="description">Choose from one of three difficulty levels. Don\'t let the Android beat you!</string>

    <string name="settings">Settings</string>


</resources>
